@@ -1,0 +1,1 @@
+RENAME TABLE `al_content` TO `al_block` ;
